--- a/chrome_extension/index.html
+++ b/chrome_extension/index.html
@@ -11,18 +11,28 @@
   height: 100px;
 }
 .actual_url {
-  width: 300px;
+  width: 350px;
   align: right;
 }
 .go_link {
-  width: 300px;
+  width: 350px;
   align: right;
 }
 .mb-20 {
   margin-bottom: 20px;
 }
 .h-fixed {
-    height: 400px;
+    height: 350px;
+    width: 650px;
+}
+.mt-80 {
+    margin-top: 80px;
+}
+.ml-80 {
+    margin-left: 80px;
+}
+.created_go_link {
+    text-align: center;
 }
 </style>
 <body>
@@ -43,7 +53,7 @@
               </form>
         </div>
         <div class="col-xs-6">
-            <img src="images/wizard_1.jpg" height="300">
+            <img src="images/wizard_1.jpg" height="200" class="mt-80 ml-80">
         </div>
     </div>
 </div>
@@ -55,7 +65,7 @@
         </div>
         <div class="col-xs-6">
             <h3 class="created_go_link"></h3>
-            <img src="images/wizard_2.jpg" class="mb-20" height="300">
+            <img src="images/wizard_2.jpg" class="mb-20 ml-80" height="200">
         </div>
     </div>
 </div>
