--- a/chrome_extension/index.html
+++ b/chrome_extension/index.html
@@ -60,12 +60,12 @@
 <div class="success container a h-fixed" style="display: none;">
     <div class="row">
         <div class="col-xs-6">
-            <h3>Successfully Go!ed</h3>
+            <h3 class="success-title">Successfully Go!ed</h3>
             <button id="copy_link_btn" class="btn btn-primary mb-20">Copy Link</button>
         </div>
         <div class="col-xs-6">
             <h3 class="created_go_link"></h3>
-            <img src="images/wizard_2.jpg" class="mb-20 ml-80" height="240">
+            <img src="images/wizard_2.jpg" class="mb-20 ml-80" height="240" id="action-wizard">
         </div>
     </div>
 </div>
