--- a/chrome_extension/index.html
+++ b/chrome_extension/index.html
@@ -47,7 +47,7 @@
                 </div>
                 <div class="mb-20">
                  <label>Go Link</label>
-                 <input type="text" class= "go_link form-control" placeholder='i.e. "go/maker-okr"'>
+                 <input type="text" class= "go_link form-control" placeholder='i.e. "go/magic"'>
                 </div>
                  <button type="submit" class="btn btn-primary mb-20">Go!</button>
               </form>
